Minor edits to notebooks

--- a/analysis/cvs_detector.ipynb
+++ b/analysis/cvs_detector.ipynb
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -587,9 +587,17 @@
        "      <th>use_width</th>\n",
        "      <th>use_area</th>\n",
        "      <th>use_separation</th>\n",
+       "      <th>use_table_beers</th>\n",
+       "      <th>use_graph_beers</th>\n",
+       "      <th>use_table_capacitor</th>\n",
+       "      <th>use_graph_capacitor</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>studentid</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -607,6 +615,10 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -617,19 +629,23 @@
        "studentid                                                                 \n",
        "17729162           0          0                  0          0         0   \n",
        "\n",
-       "           use_separation  \n",
-       "studentid                  \n",
-       "17729162                0  "
+       "           use_separation  use_table_beers  use_graph_beers  \\\n",
+       "studentid                                                     \n",
+       "17729162                0                0                0   \n",
+       "\n",
+       "           use_table_capacitor  use_graph_capacitor  \n",
+       "studentid                                            \n",
+       "17729162                     0                    0  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "ids = get_students_to_analyze_log()\n",
-    "use_wrapper_df = pd.DataFrame(index =ids, columns = ['use_table', 'use_graph','use_concentration','use_width','use_area','use_separation'])\n",
+    "use_wrapper_df = pd.DataFrame(index =ids, columns = ['use_table', 'use_graph','use_concentration','use_width','use_area','use_separation','use_table_beers', 'use_graph_beers','use_table_capacitor', 'use_graph_capacitor'])\n",
     "use_wrapper_df = use_wrapper_df.fillna(0)\n",
     "use_wrapper_df.index.name = 'studentid'\n",
     "for c in use_wrapper_df.columns:\n",
@@ -639,25 +655,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "d:\\applications\\anaconda2\\lib\\site-packages\\pandas\\core\\indexing.py:543: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  self.obj[item] = s\n",
-      "d:\\applications\\anaconda2\\lib\\site-packages\\ipykernel_launcher.py:35: FutureWarning: set_value is deprecated and will be removed in a future release. Please use .at[] or .iat[] accessors instead\n"
+      "D:\\Applications\\Anaconda2\\lib\\site-packages\\ipykernel_launcher.py:43: FutureWarning: set_value is deprecated and will be removed in a future release. Please use .at[] or .iat[] accessors instead\n"
      ]
     }
    ],
    "source": [
-    " wrapper_all_logs = {'use_table':0,'use_graph':0,'use_concentration':0,'use_width':0,'use_area':0,'use_separation':0}\n",
+    " wrapper_all_logs = {'use_table':0,'use_graph':0,'use_concentration':0,'use_width':0,'use_area':0,'use_separation':0,\n",
+    "                    'use_table_beers':0, 'use_graph_beers':0,'use_table_capacitor':0, 'use_graph_capacitor':0}\n",
     "    \n",
     "%aimport utils_read_parsing\n",
     "for sim in ['beers','capacitor']:\n",
@@ -665,7 +676,8 @@
     "    for sid,logs in log_files.iteritems():\n",
     "#         if sid != 17729162:\n",
     "#             continue\n",
-    "        wrapper_all_logs = {'use_table':0,'use_graph':0,'use_concentration':0,'use_width':0,'use_area':0,'use_separation':0}\n",
+    "        wrapper_all_logs = {'use_table':0,'use_graph':0,'use_concentration':0,'use_width':0,'use_area':0,'use_separation':0,\n",
+    "                             'use_table_beers':0, 'use_graph_beers':0,'use_table_capacitor':0, 'use_graph_capacitor':0}\n",
     "        for log in logs:\n",
     "            df = prep_parsing_data(log)\n",
     "            if not df.empty:\n",
@@ -684,6 +696,12 @@
     "                wrapper_all_logs['use_width'] = max(wrapper_all_logs['use_width'],use_width)\n",
     "                wrapper_all_logs['use_area'] = max(wrapper_all_logs['use_area'],use_area)\n",
     "                wrapper_all_logs['use_separation'] = max(wrapper_all_logs['use_separation'],use_separation)\n",
+    "                if sim == 'beers':\n",
+    "                    wrapper_all_logs['use_table_beers'] = max(wrapper_all_logs['use_table_beers'],use_table)\n",
+    "                    wrapper_all_logs['use_graph_beers'] = max(wrapper_all_logs['use_graph_beers'],use_graph)\n",
+    "                if sim == 'capacitor':\n",
+    "                    wrapper_all_logs['use_table_capacitor'] = max(wrapper_all_logs['use_table_capacitor'],use_table)\n",
+    "                    wrapper_all_logs['use_graph_capacitor'] = max(wrapper_all_logs['use_graph_capacitor'],use_graph)\n",
     "#                 print wrapper_all_logs\n",
     "\n",
     "            else:\n",
@@ -696,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -726,9 +744,17 @@
        "      <th>use_width</th>\n",
        "      <th>use_area</th>\n",
        "      <th>use_separation</th>\n",
+       "      <th>use_table_beers</th>\n",
+       "      <th>use_graph_beers</th>\n",
+       "      <th>use_table_capacitor</th>\n",
+       "      <th>use_graph_capacitor</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>studentid</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -746,6 +772,10 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -756,12 +786,16 @@
        "studentid                                                                 \n",
        "17729162           1          0                  1          1         1   \n",
        "\n",
-       "           use_separation  \n",
-       "studentid                  \n",
-       "17729162                1  "
+       "           use_separation  use_table_beers  use_graph_beers  \\\n",
+       "studentid                                                     \n",
+       "17729162                1                1                0   \n",
+       "\n",
+       "           use_table_capacitor  use_graph_capacitor  \n",
+       "studentid                                            \n",
+       "17729162                     0                    0  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -772,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -781,13 +815,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -798,6 +845,10 @@
        "      <th>use_width</th>\n",
        "      <th>use_area</th>\n",
        "      <th>use_separation</th>\n",
+       "      <th>use_table_beers</th>\n",
+       "      <th>use_graph_beers</th>\n",
+       "      <th>use_table_capacitor</th>\n",
+       "      <th>use_graph_capacitor</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -809,6 +860,10 @@
        "      <td>148.0</td>\n",
        "      <td>148.000000</td>\n",
        "      <td>148.000000</td>\n",
+       "      <td>148.000000</td>\n",
+       "      <td>148.000000</td>\n",
+       "      <td>148.000000</td>\n",
+       "      <td>148.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
@@ -818,6 +873,10 @@
        "      <td>1.0</td>\n",
        "      <td>0.993243</td>\n",
        "      <td>0.993243</td>\n",
+       "      <td>0.952703</td>\n",
+       "      <td>0.797297</td>\n",
+       "      <td>0.932432</td>\n",
+       "      <td>0.655405</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
@@ -827,6 +886,10 @@
        "      <td>0.0</td>\n",
        "      <td>0.082199</td>\n",
        "      <td>0.082199</td>\n",
+       "      <td>0.212995</td>\n",
+       "      <td>0.403378</td>\n",
+       "      <td>0.251855</td>\n",
+       "      <td>0.476850</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
@@ -834,6 +897,10 @@
        "      <td>0.000000</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
@@ -845,6 +912,10 @@
        "      <td>1.0</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
@@ -852,6 +923,10 @@
        "      <td>1.000000</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
@@ -863,6 +938,10 @@
        "      <td>1.0</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
@@ -870,6 +949,10 @@
        "      <td>1.000000</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
@@ -888,87 +971,34 @@
        "75%          1.0    1.000000                1.0        1.0    1.000000   \n",
        "max          1.0    1.000000                1.0        1.0    1.000000   \n",
        "\n",
-       "       use_separation  \n",
-       "count      148.000000  \n",
-       "mean         0.993243  \n",
-       "std          0.082199  \n",
-       "min          0.000000  \n",
-       "25%          1.000000  \n",
-       "50%          1.000000  \n",
-       "75%          1.000000  \n",
-       "max          1.000000  "
+       "       use_separation  use_table_beers  use_graph_beers  use_table_capacitor  \\\n",
+       "count      148.000000       148.000000       148.000000           148.000000   \n",
+       "mean         0.993243         0.952703         0.797297             0.932432   \n",
+       "std          0.082199         0.212995         0.403378             0.251855   \n",
+       "min          0.000000         0.000000         0.000000             0.000000   \n",
+       "25%          1.000000         1.000000         1.000000             1.000000   \n",
+       "50%          1.000000         1.000000         1.000000             1.000000   \n",
+       "75%          1.000000         1.000000         1.000000             1.000000   \n",
+       "max          1.000000         1.000000         1.000000             1.000000   \n",
+       "\n",
+       "       use_graph_capacitor  \n",
+       "count           148.000000  \n",
+       "mean              0.655405  \n",
+       "std               0.476850  \n",
+       "min               0.000000  \n",
+       "25%               0.000000  \n",
+       "50%               1.000000  \n",
+       "75%               1.000000  \n",
+       "max               1.000000  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "use_wrapper_df.describe()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>use_table</th>\n",
-       "      <th>use_graph</th>\n",
-       "      <th>use_concentration</th>\n",
-       "      <th>use_width</th>\n",
-       "      <th>use_area</th>\n",
-       "      <th>use_separation</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>studentid</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>11384795</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           use_table  use_graph  use_concentration  use_width  use_area  \\\n",
-       "studentid                                                                 \n",
-       "11384795           1          1                  1          1         0   \n",
-       "\n",
-       "           use_separation  \n",
-       "studentid                  \n",
-       "11384795                0  "
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "use_wrapper_df[use_wrapper_df['use_area']==0]"
    ]
   },
   {
@@ -980,6 +1010,19 @@
      "data": {
       "text/html": [
        "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -1026,6 +1069,82 @@
       ]
      },
      "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "use_wrapper_df[use_wrapper_df['use_area']==0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>use_table</th>\n",
+       "      <th>use_graph</th>\n",
+       "      <th>use_concentration</th>\n",
+       "      <th>use_width</th>\n",
+       "      <th>use_area</th>\n",
+       "      <th>use_separation</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>studentid</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>11384795</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           use_table  use_graph  use_concentration  use_width  use_area  \\\n",
+       "studentid                                                                 \n",
+       "11384795           1          1                  1          1         0   \n",
+       "\n",
+       "           use_separation  \n",
+       "studentid                  \n",
+       "11384795                0  "
+      ]
+     },
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
