Renames and cleans notebooks

--- a/analysis/pause_detector.ipynb
+++ b/analysis/pause_detector.ipynb
@@ -246,7 +246,7 @@
    "source": [
     "max_pauses = []\n",
     "for student,beer_pauses in all_intervals['beers'].iteritems():\n",
-    "    second_longuest_beers = sorted(beer_pauses)[-2]\n",
+    "    second_longuest_beers = sorted(beer_pauses)[-2] # second max pause since max might be at the end of their activity until they close the window\n",
     "    second_longuest_caps = sorted(all_intervals['capacitor'][student])[-2]\n",
     "    max_pauses.append(max(second_longuest_beers,second_longuest_caps))"
    ]
@@ -1078,13 +1078,16 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.16"
   },
   "toc": {
+   "base_numbering": 1,
    "nav_menu": {},
    "number_sections": true,
    "sideBar": false,
    "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
    "toc_cell": false,
    "toc_position": {},
    "toc_section_display": "block",
